--- a/_designer/css/shoe_dots.css
+++ b/_designer/css/shoe_dots.css
@@ -307,10 +307,7 @@ button{
 
 .fixed_preview {
     background-color: #FFFFFF;
-    border-left: 2px solid #EFEFEF;
-    border-right: 2px solid #EFEFEF;
-    border-top: 2px solid #EFEFEF;
-     border-bottom: 2px solid #EFEFEF;
+    border: 2px solid #EFEFEF;
     height: 150px;
     margin: 0 auto 0 -2px;
     overflow: hidden;
@@ -318,13 +315,17 @@ button{
     position: fixed;
     top: 0;
     width: 770px;
+    
+     -moz-box-shadow:    inset 0 0 10px #EFEFEF;
+   -webkit-box-shadow: inset 0 0 10px #EFEFEF;
+   box-shadow:         inset 0 0 10px #EFEFEF;
 }
 
 #designer_preview{
-    /*border:#DEDEDE solid 1px;*/
+    /*border:#DEDEDE solid 1px;
     -moz-box-shadow:     0 1px 30px 0 #CCCCCC;
     -webkit-box-shadow:  0 1px 30px 0 #CCCCCC;
-    box-shadow:          0 1px 30px 0 #CCCCCC;
+    box-shadow:          0 1px 30px 0 #CCCCCC;*/
 }
 
 
