--- a/_designer/css/Permanent_Iron_Ons.css
+++ b/_designer/css/Permanent_Iron_Ons.css
@@ -73,7 +73,6 @@ strong{display:block;clear:both;}
 }
 #designer_options_details strong{display:inline;clear:none;}
 #designer_options_details{
-    margin-top: 210px;
     text-align: center;
 }
 
@@ -319,6 +318,15 @@ button{
     position: fixed;
     top: 0;
     width: 770px;
+    -moz-box-shadow:    inset 0 0 10px #EFEFEF;
+    -webkit-box-shadow: inset 0 0 10px #EFEFEF;
+    box-shadow:         inset 0 0 10px #EFEFEF;
+}
+.designer-options{
+    height: 350px;
+    margin-top: 199px;
+    overflow-y: scroll;
+
     -moz-box-shadow:    inset 0 0 10px #EFEFEF;
     -webkit-box-shadow: inset 0 0 10px #EFEFEF;
     box-shadow:         inset 0 0 10px #EFEFEF;
