--- a/_designer/css/pencil_labels.css
+++ b/_designer/css/pencil_labels.css
@@ -220,7 +220,7 @@ button{
     position: absolute;
     right: 0;
     text-align: left;
-    top: 25px;
+    top: 64px;
     width: 190px;
 }
 
@@ -230,4 +230,29 @@ button{
 
 #pencil_labels .detial_text_label{
     font-size: 18px;
+}
+
+.fixed_preview {
+    background-color: #FFFFFF;
+    border: 2px solid #EFEFEF;
+    margin: 0 auto 0 -2px;
+    overflow: hidden;
+    padding: 15px;
+    position: fixed;
+    z-index:999;
+    top: 0;
+    width: 770px;
+    -moz-box-shadow:    inset 0 0 10px #EFEFEF;
+    -webkit-box-shadow: inset 0 0 10px #EFEFEF;
+    box-shadow:         inset 0 0 10px #EFEFEF;
+}
+
+.designer-options{
+    height: 350px;
+    margin-top: 40px;
+    overflow-y: scroll;
+    
+    -moz-box-shadow:    inset 0 0 10px #EFEFEF;
+    -webkit-box-shadow: inset 0 0 10px #EFEFEF;
+    box-shadow:         inset 0 0 10px #EFEFEF;
 }
