--- a/_designer/css/shoe_dots.css
+++ b/_designer/css/shoe_dots.css
@@ -73,7 +73,6 @@ strong{display:block;clear:both;}
 }
 #designer_options_details strong{display:inline;clear:none;}
 #designer_options_details{
-    margin-top: 180px;
     text-align: center;
 }
 
@@ -315,10 +314,20 @@ button{
     position: fixed;
     top: 0;
     width: 770px;
+
+    -moz-box-shadow:    inset 0 0 10px #EFEFEF;
+    -webkit-box-shadow: inset 0 0 10px #EFEFEF;
+    box-shadow:         inset 0 0 10px #EFEFEF;
+}
+
+.designer-options{
+    height: 350px;
+    margin-top: 174px;
+    overflow-y: scroll;
     
-     -moz-box-shadow:    inset 0 0 10px #EFEFEF;
-   -webkit-box-shadow: inset 0 0 10px #EFEFEF;
-   box-shadow:         inset 0 0 10px #EFEFEF;
+    -moz-box-shadow:    inset 0 0 10px #EFEFEF;
+    -webkit-box-shadow: inset 0 0 10px #EFEFEF;
+    box-shadow:         inset 0 0 10px #EFEFEF;
 }
 
 
