--- a/_designer/css/vinyls.css
+++ b/_designer/css/vinyls.css
@@ -164,3 +164,13 @@ button{
     -webkit-box-shadow: inset 0 0 10px #EFEFEF;
     box-shadow:         inset 0 0 10px #EFEFEF;
 }
+
+#vinyl-wrapper .designer_preview_all .preview_text{
+    left: 0;
+    top: 4px;
+}
+
+#vinyl-wrapper .designer_preview_all .preview_phone{
+    left: 0;
+    top: 50px;
+}
