--- a/_designer/css/shoe_dots.css
+++ b/_designer/css/shoe_dots.css
@@ -4,25 +4,25 @@ ul,li{list-style:none;}
 /*li{float:left;}*/
 strong{display:block;clear:both;}
 
-.preview_image_set{
+#shoe-dots .preview_image_set{
     position:absolute;
     top:12px;
     left:10px;
 
 }
 
-#designer_options_picture ul li{
+#shoe-dots #designer_options_picture ul li{
     width:32px;
     height:32px;
     border:solid 2px #666;
     padding:1px;
     margin:2px;
 }
-.font_colour_black,.font_colour_white{border:solid 1px #666;}
-.font_colour_black{width:20px;height:20px;background:#000000;display:inline-block;}
-.font_colour_white{width:20px;height:20px;background:#ffffff;display:inline-block;}
+#shoe-dots .font_colour_black,#shoe-dots .font_colour_white{border:solid 1px #666;}
+#shoe-dots .font_colour_black{width:20px;height:20px;background:#000000;display:inline-block;}
+#shoe-dots .font_colour_white{width:20px;height:20px;background:#ffffff;display:inline-block;}
 
-#designer_options_picture ul li{
+#shoe-dots #designer_options_picture ul li{
     width:60px;
     height:60px;
     border:solid 2px #666;
@@ -30,18 +30,18 @@ strong{display:block;clear:both;}
     margin:2px;
 }
 
-.preview_image{
+#shoe-dots .preview_image{
     width:60px;
     height:60px;
 }
-.preview_image_set{
+#shoe-dots .preview_image_set{
     width:45px;
     height:25px;
     display:inline-block;
 }
 
-#designer_options_colours ul li{float:none;height:50px; cursor:pointer;}
-#designer_options_colours ul li span{
+#shoe-dots #designer_options_colours ul li{float:none;height:50px; cursor:pointer;}
+#shoe-dots #designer_options_colours ul li span{
     display:inline-block;
     width:20px;
     height:20px;
@@ -50,88 +50,88 @@ strong{display:block;clear:both;}
     border:solid 2px #666;
 }
 
-.selected{
+#shoe-dots .selected{
     border:solid 2px #00B0E0 !important
 }
 
 
 
-#designer_options_identitags{
+#shoe-dots #designer_options_identitags{
     display:block;
     width:450px;
 }
-#designer_options_identitags ul.tags{
+#shoe-dots #designer_options_identitags ul.tags{
     width:450px;
 }
 
-.box{
+#shoe-dots .box{
     position:relative;
     clear:both;
     margin-bottom:20px;
     margin: 0 auto;
     width: 300px;
 }
-#designer_options_details strong{display:inline;clear:none;}
-#designer_options_details{
+#shoe-dots #designer_options_details strong{display:inline;clear:none;}
+#shoe-dots #designer_options_details{
     text-align: center;
 }
 
-#designer_options_font{
+#shoe-dots #designer_options_font{
     /*float:left;*/
     width:275px;
     text-align:left;
     margin-bottom:30px;
 }
-#designer_options_font li {
+#shoe-dots #designer_options_font li {
     font-size:28px;
     float:none;
 }
 
-#designer_options_font_colour{
+#shoe-dots #designer_options_font_colour{
     /*float:left;*/
     width:170px;
     text-align:left;
 }
-#designer_options_font_colour{
+#shoe-dots #designer_options_font_colour{
 
     margin-bottom:30px;
 }
 
-#designer_options_font_colour span {
+#shoe-dots #designer_options_font_colour span {
     cursor:pointer;
 }
-#designer_options_colours{
+#shoe-dots #designer_options_colours{
     /*float:left;*/
     width:350px;
     text-align:left;
     margin-bottom:30px;
 }
 
-#designer_options_label ul li{float:none;}
+#shoe-dots #designer_options_label ul li{float:none;}
 
-#designer_options_identitags{
+#shoe-dots #designer_options_identitags{
     text-align:left;
 }
-#designer_options_identitags input{
+#shoe-dots #designer_options_identitags input{
     margin-left:50px;
     font-weight:bold;
 }
 
-#designer_options_label{
+#shoe-dots #designer_options_label{
     position:absolute;
     top:0;
     right:0;
     width:320px;
 }
 
-#designer_options_ironon_colour{
+#shoe-dots #designer_options_ironon_colour{
     position:absolute;
     top:200px;
     right:0;
     width:320px;
 }
 
-#designer_options_ironon_colour ul li span{
+#shoe-dots #designer_options_ironon_colour ul li span{
     width:20px;
     height:20px;
     display:inline-block;
@@ -146,12 +146,12 @@ button{
     margin:5px;
 }
 
-#designer_preview {
+#shoe-dots #designer_preview {
     position:relative;
 }
 
 
-.designer_preview_rainbow_a {
+#shoe-dots .designer_preview_rainbow_a {
     background: url("../images/shoedots/9.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
     height: 180px;
     margin: 0 auto 25px;
@@ -159,7 +159,7 @@ button{
     width: 429px;
 }
 
-.designer_preview_rainbow_a .preview_text{
+#shoe-dots .designer_preview_rainbow_a .preview_text{
     display: block;
     font-family: comic_sans_msregular;
     font-size: 22px;
@@ -170,7 +170,7 @@ button{
     width: 320px;
 }
 
-.designer_preview_rainbow_a .preview_phone{
+#shoe-dots .designer_preview_rainbow_a .preview_phone{
     display: block;
     font-family: comic_sans_msregular;
     font-size: 22px;
@@ -182,7 +182,7 @@ button{
 }
 
 
-.designer_preview_rainbow_b {
+#shoe-dots .designer_preview_rainbow_b {
     height: 180px;
     margin: 0 auto 25px;
     overflow: hidden;
@@ -190,7 +190,7 @@ button{
     background: url(../images/shoedots/10.png) no-repeat scroll 0% 0% transparent;
 }
 
-.designer_preview_rainbow_b .preview_text{
+#shoe-dots .designer_preview_rainbow_b .preview_text{
     display: block;
     font-family: comic_sans_msregular;
     font-size: 22px;
@@ -201,7 +201,7 @@ button{
     width: 320px;
 }
 
-.designer_preview_rainbow_b .preview_phone{
+#shoe-dots .designer_preview_rainbow_b .preview_phone{
     display: block;
     font-family: comic_sans_msregular;
     font-size: 22px;
@@ -212,7 +212,7 @@ button{
     width: 320px;
 }
 
-.preview_image{
+#shoe-dots .preview_image{
     position: absolute;
     text-align: center;
     width: 60px;
@@ -220,13 +220,13 @@ button{
     height: 60px;
 }
 
-.designer_preview_rainbow_b .preview_image, .designer_preview_rainbow_a .preview_image {
+#shoe-dots .designer_preview_rainbow_b .preview_image, #shoe-dots .designer_preview_rainbow_a .preview_image {
     left: 6px;
     top: 100px;
 
 }
 
-.individual_preivew {
+#shoe-dots .individual_preivew {
     background: url("../images/shoedots/1.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
     height: 150px;
     margin: 0 auto;
@@ -234,14 +234,14 @@ button{
     width: 150px;
 }
 
-.individual_preivew .preview_text{
+#shoe-dots .individual_preivew .preview_text{
     display: block;
     font-family: comic_sans_msregular;
     font-size: 16px;
     text-align: center;
 }
 
-.individual_preivew .preview_phone{
+#shoe-dots .individual_preivew .preview_phone{
     display: block;
     font-family: comic_sans_msregular;
     font-size: 16px;
@@ -249,12 +249,12 @@ button{
     margin-top: 100px;
 }
 
-.individual_preivew .preview_image{
+#shoe-dots .individual_preivew .preview_image{
     right: 44px;
     top: 44px;
 }
 
-#designer_preview_text{
+#shoe-dots #designer_preview_text{
     color: #3A768F;
     font-size: 10px;
     position: absolute;
@@ -264,47 +264,47 @@ button{
     width: 210px;
 }
 
-.error-msg{
+#shoe-dots .error-msg{
     color: red;
 }
 
-.detial_text_label{
+#shoe-dots .detial_text_label{
     font-size: 18px;
 }
 
-.block-box {
+#shoe-dots .block-box {
     text-align: center;
     padding-left:14px;
 }
 
-#designer_options_picture ul {
+#shoe-dots #designer_options_picture ul {
     margin: 0px;
     padding: 0px;
     display:block;
 }
-#designer_options_picture ul li {
+#shoe-dots #designer_options_picture ul li {
     float:left;
     cursor:pointer;
 }
 
-#designer_options_font {
+#shoe-dots #designer_options_font {
     float:left;
 }
 
-.colour-selector{
+#shoe-dots .colour-selector{
     float:right;
 }
 
-#designer_options_font li table tr td {
+#shoe-dots #designer_options_font li table tr td {
     font-size:25px;
     cursor:pointer;
 }
 
-#designer_container{
+#shoe-dots #designer_container{
     padding-top: 0px;
 }
 
-.fixed_preview {
+#shoe-dots .fixed_preview {
     background-color: #FFFFFF;
     border: 2px solid #EFEFEF;
     height: 150px;
@@ -320,7 +320,7 @@ button{
     box-shadow:         inset 0 0 10px #EFEFEF;
 }
 
-.designer-options{
+#shoe-dots .designer-options{
     height: 350px;
     margin-top: 174px;
     overflow-y: scroll;
